assets/src/components/routes/ActionWrapper/Action.css
.action--loading {
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.action--loading sl-spinner {
	position: relative;
	bottom: 50px;
}

.action__header {
	position: sticky;
	top: 0;
	left: 0;
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 20px 40px;
	background-color: var(--bg-primary);
	border-bottom: 1px solid var(--border-primary);
	z-index: 1000;
	height: 90px;
	gap: 20px;
}

.action__header-title {
	display: grid;
	grid-template-columns: 30px 1fr;
	grid-template-areas:
		'logo name'
		'logo description';
	column-gap: 25px;
	align-items: center;
	max-width: 400px;
}

.action__header-title .little-logo {
	grid-area: logo;
}

.action__header-title .little-logo img,
.action__header-title .little-logo sl-icon {
	height: 35px;
	width: auto;
}

.action__header-name {
	grid-area: name;
}

.action__header-description {
	font-size: 13px;
	grid-area: description;
}

.action__header-name > span {
	font-weight: 600;
}

.action__header-name-input {
	width: 300px;
	display: inline-block;
	margin: auto;
	margin-bottom: 5px;
}

.action__header-name-input::part(base) {
	font-size: 14px;
}

.action__header-name sl-icon-button {
	font-size: 14px;
}

.action__header .action__issues::part(trigger) {
	text-align: center;
}

.action__header-buttons {
	display: flex;
	align-items: center;
	justify-content: end;
	gap: 20px;
}

.action__header-buttons-save {
	display: flex;
	align-items: center;
	gap: 20px;
	width: 370px;
}

.action__header-buttons-save,
.action__header-buttons-close-transformation {
	transition:
		visibility 0.3s 0.3s,
		opacity 0.3s 0.3s;
}

.action__header-buttons-save--hidden,
.action__header-buttons-close-transformation--hidden {
	transition:
		visibility 0s,
		opacity 0s;
	visibility: hidden;
	opacity: 0;
	gap: 0;
	width: 0;
	position: absolute;
	top: 0;
	left: 0;
}

.action__header-cancel {
	min-width: 150px;
}

.action__header-close-transformation {
	background-color: transparent;
	border: 0;
	padding: 0;
	font-size: 60px;
	font-weight: 300;
	color: rgb(202 202 202);
	transition: color 0.3s;
	cursor: pointer;
	position: relative;
	top: -6px;
	right: -10px;
}

.action__header-close-transformation:hover {
	color: var(--sl-color-neutral-600);
}

.action__header-save::part(base) {
	min-width: 200px;
}

.action__header-save--fullscreen-closing-disabled::part(base),
.action__header-save--fullscreen-closing-disabled::part(base):hover {
	background-color: var(--sl-color-primary-600);
	opacity: 1;
}

.action__body {
	max-width: 1500px;
	margin: 50px auto;
	padding: 0 40px;
}

.action .section {
	margin-bottom: 70px;
}

.action .section--annotated {
	justify-content: center;
}

.action .section:last-of-type {
	margin-bottom: 0;
}

.action .section ::part(form-control-label) {
	font-weight: 400;
}

.action__filters--disabled {
	opacity: 0.7;
}

.action__filters--disabled * {
	opacity: 1;
}

.action__filters-filter {
	display: flex;
}

.action__filters-logical {
	min-width: 100px;
	margin-right: 9px;
}

.action__filters-logical sl-button {
	width: 50px;
}

.action__filters-logical--text {
	color: var(--text-light);
	font-size: 14px;
	position: relative;
	top: 4px;
	text-align: center;
}

.action__filters-logical sl-button[variant='default']::part(base) {
	color: var(--sl-color-neutral-400);
	background-color: var(--bg-primary);
}

.action__filters-condition {
	display: flex;
	flex-flow: row wrap;
	gap: 10px;
	margin-bottom: 20px;
	align-items: baseline;
	align-items: stretch;
}

.action__filters-condition .combobox-input__error {
	width: max-content;
	margin-top: 1px;
}

.action__filters-condition--is-one-of {
	flex-flow: row nowrap;
	gap: 10px;
}

.action__filters-value-input {
	width: 150px;
}

.action__filters-operator sl-option::part(base) {
	font-size: 13px;
}

.action__filters-value-and {
	color: var(--text-light);
	font-size: 14px;
	position: relative;
	top: 4px;
}

.action__filters-value-remove {
	margin-right: 0;
	background-color: var(--sl-color-neutral-50);
	border-left: 1px solid var(--sl-color-neutral-200);
}

.action__filters-value-remove sl-icon {
	position: relative;
	top: 2px;
}

.action__filters-value-remove::part(base) {
	background-color: transparent !important;
	border: 0;
	border-radius: 5px !important;
}

.action__filters-condition + .action__filters-add-condition {
	margin-bottom: -12px;
}

.action__filters-add-condition::part(base) {
	padding-left: 0;
}

.action__filters-add-condition::part(label) {
	padding-left: 8px;
}

.action__filters-add-condition sl-icon {
	font-size: 15px;
	height: 18px;
}

.action__filters-remove-condition::part(base) {
	border: 0 !important;
	padding: 0 !important;
	background-color: transparent !important;
}

.action__filters-remove-condition::part(label) {
	display: none;
}

.action__filters-remove-condition sl-icon {
	font-size: 20px;
	width: 25px;
	transition: color 0.3s;
}

.action__filters-remove-condition:hover sl-icon {
	color: var(--sl-color-danger-600);
}

.action__filters-property-and-operator {
	display: flex;
	flex-flow: row nowrap;
	gap: 10px;
	min-width: max-content;
}

.action__filters-is-one-of-values {
	display: flex;
	flex-flow: row wrap;
	gap: 10px;
	max-width: 630px;
}

.action__table {
	display: flex;
	align-items: center;
	gap: 30px;
}

.action__table .popover {
	margin-left: -15px;
}

.action__table-key-property {
	display: flex;
	align-items: center;
	gap: 30px;
}

.action__table-key-property .popover {
	margin-left: -15px;
}

.action__table-key-section--disabled {
	opacity: 0.7;
}

.action__table-key-section--disabled * {
	opacity: 1;
}

.action__transformation-identity-column {
	margin-bottom: 30px;
	width: 350px;
}

.action__transformation-identity-columns :last-child {
	margin-bottom: 0;
}

.action__transformation-last-change-time-column {
	display: flex;
	align-items: start;
	gap: 15px;
}

.action__transformation-last-change-time {
	width: 350px;
}
/* ... */

